--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -99,7 +99,7 @@
     <section class="my-5">
         <h1 class="text-center">Usuarios Destacados</h1>
         <div class="row">
-            <!-- <div th:each="usuario : ${usuariosDestacados}" class="col-md-4 text-center">
+             <div th:each="usuario : ${usuariosDestacados}" class="col-md-4 text-center">
                 <div class="card">
                     <img th:src="@{'/img/' + ${usuario.fotoPerfil}}" alt="Foto de perfil" width="150" height="150">
                     <div class="card-body">
@@ -108,8 +108,8 @@
                         <a th:href="@{'/perfilUsuario/' + ${usuario.id}}" class="btn btn-primary">Ver perfil y apuntes</a>
                     </div>
                 </div>
-            </div> -->
-            <div class="col-md-4 text-center">
+            </div>
+            <!--<div class="col-md-4 text-center">
                 <div class="card">
                     <img th:src="${'/img/' + session.usuario.fotoPerfil}" alt="Foto de perfil" width="150" height="150">
                     <div class="card-body">
@@ -119,7 +119,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </section>
 </main>
 
