Lista novedades en home

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -87,7 +87,7 @@
                         <div class="novedad-descrip mb-2">
                             <p  th:text="${novedad.descripcion}" class="mb-2"></p>
                         </div>
-                        <a class="btn btn-primary boton-apunte"  th:href="@{/detalleApunte/{id}(id=${apunte.id})}">Ver Novedad</a>
+                        <a class="btn btn-primary boton-apunte"  th:href="@{/detalleApunte/{id}(id=${novedad.id})}">Ver Novedad</a>
                     </div>
                 </div>
             </div>
