Base de integración MP

--- a/src/main/webapp/WEB-INF/views/thymeleaf/planes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/planes.html
@@ -3,7 +3,7 @@
 <body>
 <main role="main" class="container">
     <div class="container">
-        <h1>Formulario de Registro de Apunte</h1>
+        <h1>¡Comprá tu Pack!</h1>
         <form th:action="@{/crear-orden}" method="post" class="needs-validation" novalidate>
             <fieldset class="form-group">
                 <legend>Seleccione un pack:</legend>
