Ajustes varios en redirección de compra + algunas cosas de vista

--- a/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
@@ -53,7 +53,13 @@
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" th:href="@{'/cerrarSesion'}">Cerrar Sesión</a></li>
                     </ul>
-                  </li>
+                </li>
+                <li class="nav-item mr-2">
+                    <a th:href="@{'/packs'}">
+                        <img alt="Packs" style="height: 32px"
+                             th:src="@{/img/coin.png}" />
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
