--- a/src/main/webapp/WEB-INF/views/thymeleaf/resultadoCompra.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/resultadoCompra.html
@@ -2,6 +2,6 @@
 <div th:insert="~{nav}"></div>
 <body>
 <div class="container">
-    <p th:text="${responsePago}"></p>
+    <p th:text="${estado}"></p>
 </div>
 </body>
