--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -4,7 +4,7 @@
     <main class="container mt-5">
         <div class="row">
             <div class="col-12 col-sm-9">
-              <iframe src="https://www.orimi.com/pdf-test.pdf" frameborder="0" height="500px" width="100%"></iframe>
+              <iframe th:src="@{'/pdf/' + ${apunte.pathArchivo}}" frameborder="0" height="500px" width="100%"></iframe>
             </div>
             <div class="col-12 col-sm-3">
                 <h2 th:text="${apunte.nombre}"></h2>
