Cambio de redirección al comprar apunte en el home

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -22,7 +22,7 @@
                             <div class="apunte-descrip mb-2">
                                 <p th:text="${apunte.descripcion}" class="mb-2"></p>
                             </div>
-                            <a class="btn btn-success boton-apunte" th:href="@{/comprarApunte/{id}(id=${apunte.id})}">Comprar</a>
+                            <a class="btn btn-success boton-apunte" th:href="@{/comprarApunteEnElHome/{id}(id=${apunte.id})}">Comprar</a>
                         </div>
                     </div>
                 </div>
