--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -11,7 +11,7 @@
                 <p class="fw-bold">Descripción: <span class="fw-normal" th:text="${apunte.descripcion}"></span></p>
                 <p class="fw-bold">Path: <span class="fw-normal" th:text="${apunte.pathArchivo}"></span></p>
                 <div th:if="${tipoDeAcceso}">
-                    <a th:if="${!hayResena}" th:href="@{'/formulario-alta-resena'}" class="btn btn-primary">Agregar Reseña</a>
+                    <a id="btn-resena" th:if="${!hayResena}" th:href="@{'/formulario-alta-resena'}" class="btn btn-primary">Agregar Reseña</a>
                 </div>
 
             </div>
