--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
@@ -18,6 +18,7 @@
                     </div>
                 </div>
             </div>
+R            <p th:if="${error}" style="color: red;" th:text="${error}"></p>
         </div>
 
 </body>
