--- a/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
@@ -42,6 +42,7 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item mr-2">
                     <p>Puntos disponibles <span class="fs-4" th:text="${session.usuario.puntos}"></span></p>
+                    <p>Codigo de creador <span class="fs-4" th:text="${session.usuario.codigoDeCreador}"></span></p>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
