--- a/src/main/webapp/WEB-INF/views/thymeleaf/apuntesEnVenta.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apuntesEnVenta.html
@@ -3,7 +3,7 @@
 <body>
 <div class="container">
     <div class="row">
-        <div th:each="apunte : ${apuntes}" class="col">
+        <div th:each="apunte : ${apuntes}"  th:if="${apunte.activo}" class="col">
             <div class="card my-2" style="width: 18rem;">
                 <div class="card-body">
                     <h5 th:text="${apunte.nombre}" class="card-title"></h5>
