--- a/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
@@ -19,6 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <!-- custom scripts -->
     <script th:src="@{/js/main.js}"></script>
+    <script th:src="@{/js/nav.js}"></script>
 
 </head>
 <nav th:fragment="nav" class="navbar navbar-expand-lg navbar-light bg-light">
@@ -42,7 +43,10 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item mr-2">
                     <p>Puntos disponibles <span class="fs-4" th:text="${session.usuario.puntos}"></span></p>
-                    <p>Codigo de creador <span class="fs-4" th:text="${session.usuario.codigoDeCreador}"></span></p>
+                    <div>
+                        <p style="display: inline-block;">Codigo de creador <span class="fs-4 codigo-de-creador" th:text="${session.usuario.codigoDeCreador}" ></span></p>
+                        <button onclick="copiarAlPortapapeles()" style="display: inline-block;">Copiar Código</button>
+                    </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
