--- a/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="tab-pane fade d-flex flex-wrap" id="mis-apuntes" role="tabpanel" aria-labelledby="mis-apuntes-tab">
-            <div th:each="apunte : ${apuntesCreados}" class="card m-2" style="width: 18rem;">
+            <div th:each="apunte : ${apuntesCreados}" th:if="${apunte.apunte.activo}" class="card m-2" style="width: 18rem;">
                 <div class="card-body">
                     <h5 th:text="${apunte.apunte.nombre}" class="card-title"></h5>
                     <h6 class="card-subtitle mb-2 text-muted">Materia</h6>
