--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
+<link rel="stylesheet" th:href="@{/css/apunte-detalle.css}"/>
 <div th:insert="~{nav}"></div>
 <body>
     <main class="container mt-5">
         <div class="row">
             <div class="col-12 col-sm-9">
-              <iframe th:src="@{'/pdf/' + ${apunte.pathArchivo}}" frameborder="0" height="500px" width="100%"></iframe>
+                <iframe th:src="@{'/pdf/' + ${apunte.pathArchivo}}"
+                        frameborder="0" height="500px" width="100%"
+                        th:classappend="${pdfComprado} ? '' : 'pdf-no-comprado'"></iframe>
             </div>
             <div class="col-12 col-sm-3">
                 <h2 th:text="${apunte.nombre}"></h2>
                 <p class="fw-bold">Descripción: <span class="fw-normal" th:text="${apunte.descripcion}"></span></p>
                 <p class="fw-bold">Path: <span class="fw-normal" th:text="${apunte.pathArchivo}"></span></p>
+                <a th:href="@{'/perfilUsuario/' + ${usuarioVendedor.id}}" class="btn btn-primary">Ver perfil y apuntes</a>
                 <div th:if="${tipoDeAcceso}">
                     <a id="btn-resena" th:if="${!hayResena}" th:href="@{'/formulario-alta-resena'}" class="btn btn-primary">Agregar Reseña</a>
                 </div>
