--- a/src/main/webapp/WEB-INF/views/thymeleaf/apuntesEnVenta.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apuntesEnVenta.html
@@ -6,12 +6,19 @@
         <div th:each="apunte : ${apuntes}"  th:if="${apunte.activo}" class="col">
             <div class="card my-2" style="width: 18rem;">
                 <div class="card-body">
+
                     <h5 th:text="${apunte.nombre}" class="card-title"></h5>
                     <h6 class="card-subtitle mb-2 text-muted">Materia</h6>
                     <p th:text="${apunte.descripcion}" class="card-text" style="height: 6rem;"></p>
                     <!--<a th:href="@{/detalleApunte/{id}(id=${apunte.id})}" class="btn btn-primary">Detalles</a-->
                     <p th:text="${apunte.precio}" class="card-text" style="height: 6rem;"></p>
-                    <a class="btn btn-success" th:href="@{/comprarApunte/{id}(id=${apunte.id})}">Comprar</a>
+
+                    <a th:href="@{/detalleApunte/{id}(id=${apunte.id})}" class="btn btn-primary">Detalles</a>
+
+                    <span th:unless="${#lists.contains(apuntesComprados, apunte) || #lists.contains(apuntesCreados, apunte)}">
+                        <a class="btn btn-success boton-apunte" th:href="@{/comprarApunteEnElHome/{id}(id=${apunte.id})}">Comprar</a>
+                    </span>
+
                 </div>
             </div>
         </div>
