--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -25,9 +25,10 @@
                             <div class="apunte-descrip mb-2">
                                 <p th:text="${apunte.descripcion}" class="mb-2"></p>
                             </div>
-                            <span th:if="${!apuntesComprados.contains(apunte)}">
+                            <span th:unless="${#lists.contains(apuntesComprados, apunte) || #lists.contains(apuntesCreados, apunte)}">
                                 <a class="btn btn-success boton-apunte" th:href="@{/comprarApunteEnElHome/{id}(id=${apunte.id})}">Comprar</a>
                             </span>
+
                         </div>
                     </div>
                 </div>
