Iconito en el copiar codigo de creador y no se puede borrar apunte o resena si no son tuyos, ni con boton ni por url

--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -35,7 +35,9 @@
                     <td th:text="${resena.descripcion}"></td>
                     <td th:text="${resena.cantidadDeEstrellas}"></td>
                     <td>
+                        <span th:if="${resenasDelUsuarioActual.contains(resena)}">
                         <a th:href="@{'/borrarResena/'+${resena.id}}" class="btn btn-danger m-1">Borrar</a>
+                        </span>
                     </td>
                 </tr>
             </tbody>
