--- a/src/main/webapp/WEB-INF/views/thymeleaf/altaApunte.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/altaApunte.html
@@ -6,6 +6,21 @@
         <h1>Formulario de Registro de Apunte</h1>
         <form th:action="@{/subirApunte}" method="post" th:object="${datosApunte}" class="needs-validation" novalidate enctype="multipart/form-data">
             <div class="form-group">
+                <label for="idCarrera">Selecciona la Carrera:</label>
+                <select id="idCarrera" class="form-control" required="required">
+                    <option th:each="carrera : ${listaCarreras}" th:value="${carrera.id}" th:text="${carrera.descripcion}"></option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="idMateria">Selecciona la Materia:</label>
+                <select id="idMateria" class="form-control" th:field="*{idMateria}" required="required">
+                    <!-- Opciones de materia se cargarán dinámicamente aquí -->
+
+                </select>
+
+            </div>
+
+            <div class="form-group">
                 <label for="nombre">Nombre del Apunte:</label>
                 <input type="text" id="nombre" th:field="*{nombre}" class="form-control" required="required" />
             </div>
@@ -43,4 +58,36 @@
         </form>
     </div>
 </main>
+<script th:inline="javascript">
+    // Script para manejar el cambio en el select de la carrera
+    $(document).ready(function() {
+        $('#idCarrera').change(function() {
+            var idCarrera = $(this).val();
+            cargarMaterias(idCarrera);
+        });
+
+        function cargarMaterias(idCarrera) {
+            // Realizar una solicitud AJAX para obtener las materias asociadas a la carrera
+            $.ajax({
+                url: '/spring/materiasPorCarrera/' + idCarrera,
+                type: 'GET',
+                success: function(data) {
+                    // Limpiar y cargar las nuevas opciones en el select de materias
+                    console.log(data);
+                    var selectMateria = $('#idMateria');
+                    selectMateria.empty();
+                    $.each(data, function(index, materia) {
+                        selectMateria.append('<option value="' + materia.id + '">' + materia.descripcion + '</option>');
+                    });
+                    if (data.length > 0) {
+                        selectMateria.val(data[0].id).change();
+                    }
+                },
+                error: function() {
+                    console.log('Error al cargar las materias.');
+                }
+            });
+        }
+    });
+</script>
 </body>
