Aparece promedio de puntaje resenas en el apunte detalle y el boton de comprar (en cualquier lado, la idea es que se pare sobre el apunte borroso) si el usuario que entra al detalle no tiene comprado el apunte

--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -8,7 +8,7 @@
                 <iframe th:src="@{'/pdf/' + ${apunte.pathArchivo}}"
                         frameborder="0" height="500px" width="100%"
                         th:classappend="${pdfComprado} ? '' : 'pdf-no-comprado'"></iframe>
-                <a th:unless="${#lists.contains(apuntesCompradosPorUsuarioActual, apunte)}"
+                <a th:unless="${#lists.contains(apuntesCompradosPorUsuarioActual, apunte) or #lists.contains(apuntesCreadosPorUsuarioActual, apunte)}"
                    class="btn btn-success boton-apunte"
                    th:href="@{/comprarApunteEnElHome/{id}(id=${apunte.id})}">Comprar</a>
             </div>
