--- a/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
@@ -44,7 +44,7 @@
                 <li class="nav-item mr-2">
                     <p>Puntos disponibles <span class="fs-4" th:text="${session.usuario.puntos}"></span></p>
                     <div>
-                        <p style="display: inline-block;">Codigo de creador <span class="fs-4 codigo-de-creador" th:text="${session.usuario.codigoDeCreador}" ></span></p>
+                        <p style="display: inline-block;"> <span class="fs-4 codigo-de-creador" th:text="${session.usuario.codigoDeCreador}" ></span></p>
                         <button onclick="copiarAlPortapapeles()" style="display: inline-block;">
                             <i class="fa-regular fa-copy" style="color: black;"></i>
                         </button>
