--- a/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
@@ -34,7 +34,10 @@
                     <h3 th:text="${apunte.precio}" class="card-text"></h3>
                     <a th:href="@{/detalleApunte/{id}(id=${apunte.id})}" class="btn btn-primary">Detalles</a>
                     <a th:href="@{/editarApunte/{id}(id=${apunte.id})}" class="btn btn-primary">Editar</a>
-                    <a th:href="@{/eliminarApunte/{id}(id=${apunte.id})}" class="btn btn-danger">Eliminar</a>
+                    <form th:action="@{/eliminarApunte/{id}(id=${apunte.id})}" method="post">
+                        <input type="hidden" name="_method" value="delete" />
+                        <button type="submit" class="btn btn-danger">Eliminar</button>
+                    </form>
                 </div>
             </div>
         </div>
