--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
@@ -11,9 +11,11 @@
                     <p th:text="${apunte.descripcion}" class="card-text" style="height: 6rem;"></p>
                     <p th:text="${apunte.precio}" class="card-text" style="height: 6rem;"></p>
                     <a th:href="@{/detalleApunte/{id}(id=${apunte.id})}" class="btn btn-primary">Detalles</a>
-                    <span th:unless="${#lists.contains(apuntesCompradosPorUsuarioActual, apunte)}">
-                        <a class="btn btn-success boton-apunte" th:href="@{/comprarApunteEnElHome/{id}(id=${apunte.id})}">Comprar</a>
-                    </span>
+                    <form th:action="@{/comprarApuntePorPerfil/{id}(id=${apunte.id})}" method="post">
+
+                        <button id="botonComprar" th:unless="${#lists.contains(apuntesCompradosPorUsuarioActual, apunte) or #lists.contains(apuntesCreadosPorUsuarioActual, apunte)}"
+                                type="submit" class="btn btn-success boton-apunte">Comprar</button>
+                    </form>
                 </div>
             </div>
             <p th:if="${error}" style="color: red;" th:text="${error}"></p>
