--- a/src/main/webapp/resources/core/css/main.css
+++ b/src/main/webapp/resources/core/css/main.css
@@ -64,6 +64,47 @@ button:hover {
     bottom: 15px;
 }
 
-.bronce{
-    background-color: #957025!important;
+.btn-bronce{
+    background-color: #a97142;
+    color: white;
+}
+.btn-plata{
+    background-color: #ccd0d3;
+    color: white;
+}
+.btn-oro{
+    background-color: #ffd700;
+    color: white;
+}
+.packs-btn-group {
+    margin: 10px;
+}
+
+.packs-btn-group input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+}
+
+.packs-btn-group label {
+    display: inline-block;
+    background-color: #ddd;
+    padding: 10px 20px;
+    font-family: sans-serif, Arial;
+    font-size: 16px;
+    border: 2px solid #444;
+    border-radius: 4px;
+}
+
+.packs-btn-group label:hover {
+    filter: brightness(80%);
+}
+
+.packs-btn-group input[type="radio"]:focus + label {
+    border: 2px dashed #444;
+}
+
+.packs-btn-group input[type="radio"]:checked + label {
+    background-color: #bfb;
+    border-color: #4c4;
 }
