--- a/src/main/webapp/WEB-INF/views/thymeleaf/altaApunte.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/altaApunte.html
@@ -52,7 +52,7 @@
                 <p th:errors="*{precio}"></p>
             </div>
 
-            <div th:if="${error}" class="error-message" th:text="${error}"></div>
+            <div th:if="${error}" class="error-message text-danger" th:text="${error}"></div>
 
             <button type="submit" class="btn btn-primary">Registrar Apunte</button>
         </form>
