--- a/src/main/webapp/WEB-INF/views/thymeleaf/altaCarrera.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/altaCarrera.html
@@ -3,7 +3,7 @@
 <body>
 <main role="main" class="container">
     <div class="container">
-        <h1>Formulario de Registro de Materia</h1>
+        <h1>Formulario de Registro de Carrera</h1>
         <form th:action="@{/subirCarrera}" method="post" th:object="${datosCarrera}" class="needs-validation" novalidate enctype="multipart/form-data">
             <div class="form-group">
                 <label for="descripcion">Nombre de la Carrera:</label>
