--- a/src/main/webapp/WEB-INF/views/thymeleaf/packs.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/packs.html
@@ -9,15 +9,15 @@
                 <legend>Seleccione un pack:</legend>
                 <div class="btn-group packs-btn-group" data-toggle="buttons">
                     <div>
-                        <label class="btn" for="packBronce"><input type="radio" id="packBronce" name="pack" value="bronce" /> <img alt="Packs" style="height: 24px" th:src="@{/img/coin.png}"> x 20</label>
+                        <label class="btn btn-bronce" for="packBronce"><input type="radio" id="packBronce" name="pack" value="bronce" /> <img alt="Packs" style="height: 24px" th:src="@{/img/coin.png}"> x 20</label>
                     </div>
 
                     <div>
-                        <label class="btn" for="packPlata"><input type="radio" id="packPlata" name="pack" value="plata" /> <img alt="Packs" style="height: 24px" th:src="@{/img/coin.png}"> x 50</label>
+                        <label class="btn btn-plata" for="packPlata"><input type="radio" id="packPlata" name="pack" value="plata" /> <img alt="Packs" style="height: 24px" th:src="@{/img/coin.png}"> x 50</label>
                     </div>
 
                     <div>
-                        <label class="btn" for="packOro"><input type="radio" id="packOro" name="pack" value="oro" /> <img alt="Packs" style="height: 24px" th:src="@{/img/coin.png}"> x 100</label>
+                        <label class="btn btn-oro" for="packOro"><input type="radio" id="packOro" name="pack" value="oro" /> <img alt="Packs" style="height: 24px" th:src="@{/img/coin.png}"> x 100</label>
                     </div>
                 </div>
             </fieldset>
