--- a/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -38,7 +38,7 @@
             </div> -->
         </div>
     </div>
-    <div class="d-flex mt-5 p-2" style="background: #e3f2fd;">
+    <!--<div class="d-flex mt-5 p-2" style="background: #e3f2fd;">
         <div class="fotoPerfil">
             <img th:src="@{'/img/' + ${usuario.fotoPerfil}}" alt="Foto de perfil">
         </div>
@@ -49,9 +49,33 @@
             <p class="font-weight-bold">Puntos: <span th:text="${usuario.puntos}"></span></p>
 
         </div>
-    </div>
-    <div class="col-12 col-md-8 col-lg-6 mt-5 mx-auto">
-        <div id="map" class="w-100 rounded-lg border border-2 border-primary shadow-lg" style="height: 350px;"></div>
+    </div>-->
+
+    <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
+        <div class="card-perfil p-4">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <button class="btn btn-secondary">
+                    <img th:src="@{'/img/' + ${usuario.fotoPerfil}}" alt="Foto de perfil" height="100" width="100" /></button>
+                <span class="name mt-3" th:text="${ usuario.nombre + ' ' + usuario.apellido}"></span>
+                <span th:text="${usuario.email}" class="idd"></span>
+                <div class="d-flex flex-row justify-content-center align-items-center gap-2">
+                    <span th:text="${session.usuario.codigoDeCreador}" class="idd1"></span>
+                    <span><i class="fa fa-copy"></i></span>
+                </div>
+                <div class="d-flex flex-row justify-content-center align-items-center mt-3">
+                    <span class="number">10 <span class="follow">Apuntes</span></span>
+                </div>
+                <div class=" d-flex mt-2">
+                    <button class="btn1 btn-dark">Edit Profile</button>
+                </div>
+                <div class="text mt-3">
+                    <span>Acá podría ir una descripción tranquilamente, o lo que consideren necesario.</span>
+                </div>
+                <div class="col-12 col-md-12 col-lg-12 mt-3 mx-auto">
+                    <div id="map" class="w-100 rounded-lg border border-2 border-primary shadow-lg" style="height: 350px;"></div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 </body>
