--- a/src/main/webapp/resources/core/css/main.css
+++ b/src/main/webapp/resources/core/css/main.css
@@ -67,14 +67,17 @@ button:hover {
 .btn-bronce{
     background-color: #a97142;
     color: white;
+    border: 2px solid #c18b60;
 }
 .btn-plata{
     background-color: #ccd0d3;
     color: white;
+    border: 2px solid #e8e8e8;
 }
 .btn-oro{
     background-color: #ffd700;
     color: white;
+    border: 2px solid #fde16d;
 }
 .packs-btn-group {
     margin: 10px;
@@ -88,11 +91,9 @@ button:hover {
 
 .packs-btn-group label {
     display: inline-block;
-    background-color: #ddd;
     padding: 10px 20px;
     font-family: sans-serif, Arial;
     font-size: 16px;
-    border: 2px solid #444;
     border-radius: 4px;
 }
 
